--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <td>June 2022-</td>
         <td>General Motors</td>
         <td>Working with service reports from GM dealerships and to analyse and represent the large amount of data received monthly. My current project is to analyze push notification data along with dealership repair order financials.</td>
-        <td>Power Bi</td>
+        <td>Hue, Hadoop,Power Bi</td>
       </tr>
     </table>
     <hr>
