--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
       <h2>My Skills.</h2>
       <div class="skill-row">
         <a href="https://imgbb.com/"><img class= "code-img" img src="https://i.ibb.co/R9KFVYy/programmer-gif.gif" alt="programmer-gif" border="0" width="370" height="250"></a>
-        <h3>Web Development and Middleware</h3>
-        <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+        <h3>Web Development</h3>
+        <p>I have experience building wesites with html/css and have used nginx to serve websites. In fact the site you are reading now was made by me!.</p>
       </div>
       <div class="skill-row">
 
         <a href="https://imgbb.com/"><img class= "data-img" img src="https://i.ibb.co/7Gt8Qzs/digital-skola-bertalenta-digital.gif" alt="digital-skola-bertalenta-digital" border="0"></a>
         <h3>Data Analytics</h3>
-        <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+        <p>I have a great deal of experience with data analytics as I helped analyze/visualize the efficacy of General Motor's OnStar Program in generating service repair leads by sending push notifications to users.</p>
+        <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRz7Sd3Qf-lBo5JG6_RQf4ujLFj-bAhecbqqkXE9wBP74SZ9Y2PRDoF-s9qrdVcCA/embed?start=false&loop=true&delayms=3000" frameborder="0" width="1440" height="839" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
       </div>
     </div>
     <hr>
