--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <tr>
               <td>OCaml</td>
               <td>⭐⭐⭐</td>
-              <td>iOS Development</td>
+              <td>Swift</td>
               <td>⭐⭐⭐</td>
             </tr>
 
